# GFR-MIL

./: README.md  pyproject.toml  requirements.txt
examples/: build_mapping.py
src/gfr_mil/: data.py  engine.py  eval.py  eval_survival.py  metrics.py  models.py  survival.py  train.py  train_survival.py  utils.py
src/gfr_mil/model_zoo/: adapters.py  fmha_compat.py  gfr_mil_exact.py  model_utils.py  roformer.py
